Fix the alignment of sidebar

--- a/YoutubeClone/styles/style.css
+++ b/YoutubeClone/styles/style.css
@@ -1,3 +1,23 @@
+p {
+  margin-top: 0;
+  margin-bottom: 0;
+}
+
+body {
+   
+  font-family: Roboto, Arial;
+  margin: 0;
+  padding-top: 80px;
+  padding-left: 96px;
+  padding-right: 24px;
+  background-color: rgb(240, 240, 240);
+}
+
+@media (min-width: 1200px){
+  body{
+    padding-left: 171px;
+  }
+}
 .header {
   height: 55px;
   display: flex;
@@ -145,4 +165,146 @@
   height: 28px;
   border-radius: 16px;
   width: 26px;
+}
+.sidebar{
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    top: 55px;
+    width: 75px;
+    background-color: white;
+    z-index: 200;
+    padding-top: 5px;
+}
+
+
+@media (min-width: 1200px) {
+    .sidebar{
+        width: 150px;
+    }
+  }
+
+.sidebar-link{
+    padding-top: 10px;    
+    padding-bottom: 10px; 
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    cursor: pointer;
+}
+
+@media (min-width: 1201px){
+   .sidebar-link {
+        height: auto;
+        padding: 10px 0;
+        flex-direction: row;
+        justify-content: flex-start; 
+        align-items: center; 
+        margin-left: 0; 
+        margin-right: 0; 
+        padding-left: 20px;
+        gap: 20px; 
+    }
+}
+.sidebar-link:hover{
+    background-color: rgb(235, 235, 235);
+}
+
+.sidebar-link img{
+    height: 24px;   
+    margin-bottom: 0px; 
+    margin-top: 2rem;
+}
+
+.sidebar-link div{
+    font-size: 12px;
+    margin-top: 2rem; 
+}
+
+.thumbnail {
+  width: 100%;
+}
+
+.video-link{
+  color: black;
+}
+.video-title {
+  margin-top: 0;
+  font-size: 14px;
+  font-weight: 500;
+  line-height: 20px;
+  margin-bottom: 10px;
+}
+
+@media (min-width: 1000px) {
+  .video-title {
+    font-size: 16px;
+    line-height: 24px;
+  }
+  .video-author, .video-stats{
+    font-size: 14px;
+  }
+}
+
+.video-info-grid {
+  display: grid;
+  grid-template-columns: 50px 1fr;
+}
+
+.profile-picture {
+  width: 36px;
+  border-radius: 50px;
+}
+
+.thumbnail-row {
+  margin-bottom: 8px;
+  position: relative;
+}
+
+.video-author,
+.video-stats {
+  font-size: 12px;
+  color: rgb(96, 96, 96);
+}
+
+.video-author {
+  margin-bottom: 4px;
+}
+
+.video-grid {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  column-gap: 16px;
+  row-gap: 40px;
+}
+
+@media (max-width: 750px) {
+  .video-grid {
+    grid-template-columns: 1fr 1fr;
+  }
+}
+
+@media (min-width: 751px) and (max-width: 999px) {
+  .video-grid {
+    grid-template-columns: 1fr 1fr 1fr;
+  }
+}
+
+@media (min-width: 1000px) {
+  .video-grid {
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+  }
+}
+
+.video-time {
+  font-size: 12px;
+  font-weight: 500;
+  padding: 4px;
+  border-radius: 2px;
+  background-color: black;
+  color: white;
+  position: absolute;
+  bottom: 8px;
+  right: 5px;
 }
